Use double quotes in Nunjucks templates

--- a/app/views/consent/_another-child.html
+++ b/app/views/consent/_another-child.html
@@ -7,16 +7,16 @@
   },
   items: [
     {
-      text: 'Yes'
+      text: "Yes"
     },
     {
-      text: 'No'
+      text: "No"
     }
   ],
   decorate: "another-child"
 }) }}
 
 {{ button({
-  text: 'Continue',
-  href: '#'
+  text: "Continue",
+  href: "#"
 }) }}
