--- a/app/views/consent/address.html
+++ b/app/views/consent/address.html
@@ -6,7 +6,7 @@
 
   {{ input({
     label: {
-      text: 'Address line 1'
+      text: "Address line 1"
     },
     decorate: "address.line1",
     autocomplete: "address-line1"
@@ -14,7 +14,7 @@
 
   {{ input({
     label: {
-      text: 'Address line 2 (optional)'
+      text: "Address line 2 (optional)"
     },
     decorate: "address.line2",
     autocomplete: "address-line2"
