--- a/app/views/consent/child-nhs.html
+++ b/app/views/consent/child-nhs.html
@@ -36,7 +36,7 @@
     },
     items: [
       {
-        text: 'Yes, I know their NHS number',
+        text: "Yes, I know their NHS number",
         hint: {
 
         },
@@ -45,7 +45,7 @@
         }
       },
       {
-        text: 'No'
+        text: "No"
       }
     ],
     decorate: "child.dob"
