--- a/app/views/consent/confirmation-contraindications.html
+++ b/app/views/consent/confirmation-contraindications.html
@@ -1,6 +1,6 @@
 {% extends "layouts/wizard.html" %}
-{% set 3in1consent = data['3-in-1-consent'] !== 'No' %}
-{% set menACWYconsent = data['men-acwy-consent'] !== 'No' %}
+{% set 3in1consent = data["3-in-1-consent"] !== "No" %}
+{% set menACWYconsent = data["men-acwy-consent"] !== "No" %}
 {% set consentForBoth = 3in1consent and menACWYconsent %}
 
 {% set title %}
