--- a/app/views/consent/health-aspirin.html
+++ b/app/views/consent/health-aspirin.html
@@ -24,12 +24,12 @@
     },
     items: [
       {
-        text: 'Yes',
+        text: "Yes",
         conditional: {
           html: html
         }
       },
-      { text: 'No' }
+      { text: "No" }
     ],
     decorate: "health.aspirin"
   }) }}
