--- a/app/views/consent/health-immunosuppressant-medication.html
+++ b/app/views/consent/health-immunosuppressant-medication.html
@@ -21,12 +21,12 @@
     },
     items: [
       {
-        text: 'Yes',
+        text: "Yes",
         conditional: {
           html: html
         }
       },
-      { text: 'No' }
+      { text: "No" }
     ],
     decorate: "health.immunosuppressant-medication"
   }) }}
