--- a/app/views/consent/no-consent-given.html
+++ b/app/views/consent/no-consent-given.html
@@ -11,16 +11,16 @@
       }
     },
     items: [
-      { text: 'Vaccine contains gelatine from pigs' } if vaccine == "flu",
-      { text: 'Vaccine already received' },
-      { text: 'Vaccine will be given elsewhere' },
-      { text: 'Medical reasons' },
-      { text: 'Personal choice' },
+      { text: "Vaccine contains gelatine from pigs" } if vaccine == "flu",
+      { text: "Vaccine already received" },
+      { text: "Vaccine will be given elsewhere" },
+      { text: "Medical reasons" },
+      { text: "Personal choice" },
       {
-        divider: 'or'
+        divider: "or"
       },
       {
-        text: 'Other'
+        text: "Other"
       }
     ],
     decorate: "no-consent-reason"
