--- a/app/views/dpt/3-in-1-no-consent-given.html
+++ b/app/views/dpt/3-in-1-no-consent-given.html
@@ -11,14 +11,14 @@
       }
     },
     items: [
-      { text: 'Personal choice' },
-      { text: 'Vaccine already received' },
-      { text: 'Vaccine will be given elsewhere' },
-      { text: 'Medical reasons' },
+      { text: "Personal choice" },
+      { text: "Vaccine already received" },
+      { text: "Vaccine will be given elsewhere" },
+      { text: "Medical reasons" },
       {
-        divider: 'or'
+        divider: "or"
       },
-      { text: 'Other' }
+      { text: "Other" }
     ],
     decorate: "3-in-1-no-consent-reason"
   }) }}
