--- a/app/views/dpt/men-acwy-consent.html
+++ b/app/views/dpt/men-acwy-consent.html
@@ -14,10 +14,10 @@
     },
     items: [
       {
-        text: 'Yes, I agree to them having the MenACWY vaccine'
+        text: "Yes, I agree to them having the MenACWY vaccine"
       },
       {
-        text: 'No'
+        text: "No"
       }
     ],
     decorate: "men-acwy-consent"
