--- a/app/views/dpt/start.html
+++ b/app/views/dpt/start.html
@@ -15,7 +15,7 @@
           <p class="nhsuk-u-margin-bottom-6">Both vaccines are offered to all young people aged 13 to 15 (in school Years 9 and 10). They’re given as injections into the upper arm.</p>
 
           {{ button({
-            text: 'Start now',
+            text: "Start now",
             href: paths.next
           }) }}
 
