--- a/app/views/emails/flu-consent.html
+++ b/app/views/emails/flu-consent.html
@@ -27,5 +27,5 @@
 
   <p><a href="https://www.nhs.uk/conditions/vaccinations/child-flu-vaccine/">Find out more about the flu vaccine on NHS.UK</a></p>
 
-  {% include 'emails/_contact.html' %}
+  {% include "emails/_contact.html" %}
 {% endblock %}
