--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -39,5 +39,5 @@
 
   <p>We suggest you talk to your child about the vaccine before you respond to us. If they want to have the vaccine, they have the right to request this themselves.</p>
 
-  {% include 'emails/_contact.html' %}
+  {% include "emails/_contact.html" %}
 {% endblock %}
