--- a/app/views/emails/hpv-vaccine-given.html
+++ b/app/views/emails/hpv-vaccine-given.html
@@ -1,6 +1,6 @@
 {% extends "layouts/email.html" %}
 {% set subject = "Your child got their first dose of the HPV vaccine" %}
-{% set name = parent.name or 'Jane Doe' %}
+{% set name = parent.name or "Jane Doe" %}
 {% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
