--- a/app/views/flu/confirmation-jab-contact.html
+++ b/app/views/flu/confirmation-jab-contact.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = 'Your child will not get a nasal flu vaccination at school' %}
+{% set title = "Your child will not get a nasal flu vaccination at school" %}
 {% set hideButton = true %}
 {% block pageNavigation %}{% endblock %}
 
