--- a/app/views/flu/im-consent.html
+++ b/app/views/flu/im-consent.html
@@ -18,11 +18,11 @@
     },
     items: [
       {
-        text: 'Yes, I am happy for a nurse to contact me',
-        value: 'A nurse can contact me about an injection'
+        text: "Yes, I am happy for a nurse to contact me",
+        value: "A nurse can contact me about an injection"
       },
       {
-        text: 'No'
+        text: "No"
       }
     ],
     decorate: "im-consent"
