--- a/app/views/flu/start.html
+++ b/app/views/flu/start.html
@@ -11,7 +11,7 @@
           <p class="nhsuk-u-margin-bottom-6">The vaccination helps to protect children against flu. It also protects others who are vulnerable to flu, such as babies and older people.</p>
 
           {{ button({
-            text: 'Start now',
+            text: "Start now",
             href: paths.next
           }) }}
 
