--- a/app/views/hpv/start.html
+++ b/app/views/hpv/start.html
@@ -13,7 +13,7 @@
           <p class="nhsuk-u-margin-bottom-6">It’s important to have both doses of the vaccine to be properly protected.</p>
 
           {{ button({
-            text: 'Start now',
+            text: "Start now",
             href: paths.next
           }) }}
 
