--- a/app/views/sais/campaigns.html
+++ b/app/views/sais/campaigns.html
@@ -61,9 +61,9 @@
           </table>
 
           {{ button({
-            text: 'Add school campaign',
-            classes: 'nhsuk-button--secondary',
-            href: '#'
+            text: "Add school campaign",
+            classes: "nhsuk-button--secondary",
+            href: "#"
           }) }}
 
           <p>
