--- a/app/views/sais/start.html
+++ b/app/views/sais/start.html
@@ -16,8 +16,8 @@
           </ul>
 
           {{ button({
-            text: 'Sign in',
-            href: '/school/sign-in'
+            text: "Sign in",
+            href: "/school/sign-in"
           }) }}
       </div>
     </main>
