--- a/app/views/school/campaign/flu-preview.html
+++ b/app/views/school/campaign/flu-preview.html
@@ -65,7 +65,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
       {{ button({
-        text: 'Send consent requests'
+        text: "Send consent requests"
       }) }}
 
       <h2 class="nhsuk-heading-m">Preview</h2>
