--- a/app/views/school/campaign/flu-reminder-preview.html
+++ b/app/views/school/campaign/flu-reminder-preview.html
@@ -69,7 +69,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
       {{ button({
-        text: 'Send reminders'
+        text: "Send reminders"
       }) }}
 
       <h2 class="nhsuk-heading-m">Preview</h2>
