--- a/app/views/school/campaign/flu.html
+++ b/app/views/school/campaign/flu.html
@@ -21,8 +21,8 @@
       <p>You need to send a consent request for each eligible child. This might be by email, text message or paper form.</p>
 
       {{ button({
-        classes: 'nhsuk-u-margin-top-4',
-        text: 'Start now'
+        classes: "nhsuk-u-margin-top-4",
+        text: "Start now"
       }) }}
 
       <!-- <table class="nhsuk-table">
