--- a/app/views/school/index.html
+++ b/app/views/school/index.html
@@ -10,9 +10,9 @@
           <h1 class="nhsuk-heading-xl">{{ serviceName + " prototype" }}</h1>
 
           {{ button({
-            text: 'View prototype',
-            href: '/start',
-            classes: 'nhsuk-u-margin-bottom-9'
+            text: "View prototype",
+            href: "/start",
+            classes: "nhsuk-u-margin-bottom-9"
           }) }}
         </div>
       </div>
