--- a/app/views/school/start.html
+++ b/app/views/school/start.html
@@ -16,8 +16,8 @@
           </ul>
 
           {{ button({
-            text: 'Start now',
-            href: '/school/sign-in'
+            text: "Start now",
+            href: "/school/sign-in"
           }) }}
       </div>
     </main>
