--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -1,8 +1,8 @@
 {% extends "layouts/wizard.html" %}
 {% set title = "Check your answers and confirm" %}
 {% set buttonText = "Confirm" %}
-{% set basePath = '/' + (vaccine | lower) + '/' %}
-{% set gridClass = 'nhsuk-grid-column-full' %}
+{% set basePath = "/" + (vaccine | lower) + "/" %}
+{% set gridClass = "nhsuk-grid-column-full" %}
 {% set consented = (data.consent and data.consent | arrayOrStringIncludes("Yes, I agree")) or not data.consent %}
 
 {% block form %}
@@ -13,31 +13,31 @@
   <div class="nhsuk-card">
     <div class="nhsuk-card__content">
       {% set reasonHtml %}
-        <p>{{ d('no-consent-reason') }}</p>
-        {% if d('no-consent-reason-details') %}
-          <p>{{ d('no-consent-reason-details') }}</p>
+        <p>{{ d("no-consent-reason") }}</p>
+        {% if d("no-consent-reason-details") %}
+          <p>{{ d("no-consent-reason-details") }}</p>
         {% endif %}
       {% endset %}
 
       {{ summaryList({
         rows: decorateRows([
           {
-            key: 'Do you agree?',
-            data: 'consent',
-            href: basePath + 'consent/consent?change=true'
+            key: "Do you agree?",
+            data: "consent",
+            href: basePath + "consent/consent?change=true"
           },
           {
-            key: 'Reason',
+            key: "Reason",
             value: {
               html: reasonHtml
             },
-            href: basePath + 'consent/no-consent-given?change=true'
+            href: basePath + "consent/no-consent-given?change=true"
           } if not consented,
           {
-            key: 'Alternative option',
-            data: 'im-consent',
-            href: basePath + 'im-consent?change=true'
-          } if not consented and d('im-consent')
+            key: "Alternative option",
+            data: "im-consent",
+            href: basePath + "im-consent?change=true"
+          } if not consented and d("im-consent")
         ])
       }) }}
     </div>
@@ -45,10 +45,10 @@
 
   {% set addressHtml %}
     <p>
-      {% if d('address.line1') %}{{ d('address.line1') }}{% endif %}
-      {% if d('address.line2') %}<br />{{ d('address.line2') }}{% endif %}
-      {% if d('address.level2') %}<br />{{ d('address.level2') }}{% endif %}
-      {% if d('address.postal-code') %}<br />{{ d('address.postal-code') }}{% endif %}
+      {% if d("address.line1") %}{{ d("address.line1") }}{% endif %}
+      {% if d("address.line2") %}<br />{{ d("address.line2") }}{% endif %}
+      {% if d("address.level2") %}<br />{{ d("address.level2") }}{% endif %}
+      {% if d("address.postal-code") %}<br />{{ d("address.postal-code") }}{% endif %}
     </p>
   {% endset %}
 
@@ -58,42 +58,42 @@
       {{ summaryList({
         rows: decorateRows([
           {
-            key: 'Child’s name',
+            key: "Child’s name",
             value: childName,
-            href: basePath + 'consent/child?change=true'
+            href: basePath + "consent/child?change=true"
           },
           {
-            key: 'Also known as',
-            data: 'child.preferred-name',
-            href: basePath + 'consent/child?change=true'
-          } if d('child.preferred-name'),
+            key: "Also known as",
+            data: "child.preferred-name",
+            href: basePath + "consent/child?change=true"
+          } if d("child.preferred-name"),
           {
-            key: 'Date of birth',
-            value: d('child.dob') | isoDateFromDateInput | govukDate,
-            href: basePath + 'consent/child-dob?change=true'
-          } if d('child.dob'),
+            key: "Date of birth",
+            value: d("child.dob") | isoDateFromDateInput | govukDate,
+            href: basePath + "consent/child-dob?change=true"
+          } if d("child.dob"),
           {
-            key: 'Address',
+            key: "Address",
             value: {
               html: addressHtml
             },
-            href: basePath + 'consent/address?change=true'
+            href: basePath + "consent/address?change=true"
           } if consented,
           {
-            key: 'School',
-            value: 'Hele’s Secondary School',
-            href: basePath + 'consent/school?change=true'
+            key: "School",
+            value: "Hele’s Secondary School",
+            href: basePath + "consent/school?change=true"
           },
           {
-            key: 'GP Surgery',
-            data: 'child.gp',
-            href: basePath + 'consent/child-gp?change=true'
-          } if consented and d('child.gp') and d('child.has-gp') == 'yes',
+            key: "GP Surgery",
+            data: "child.gp",
+            href: basePath + "consent/child-gp?change=true"
+          } if consented and d("child.gp") and d("child.has-gp") == "yes",
           {
-            key: 'Registered with a GP',
-            value: d('child.has-gp') | capitaliseFirstLetter,
-            href: basePath + 'consent/child-gp?change=true'
-          } if consented and d('child.has-gp') != 'yes'
+            key: "Registered with a GP",
+            value: d("child.has-gp") | capitaliseFirstLetter,
+            href: basePath + "consent/child-gp?change=true"
+          } if consented and d("child.has-gp") != "yes"
         ])
       }) }}
     </div>
@@ -105,24 +105,24 @@
       {{ summaryList({
         rows: decorateRows([
           {
-            key: 'Your name',
-            data: 'parent.name',
-            href: basePath + 'consent/parent-guardian?change=true'
+            key: "Your name",
+            data: "parent.name",
+            href: basePath + "consent/parent-guardian?change=true"
           },
           {
-            key: 'Relationship',
-            data: 'parent.relationship',
-            href: basePath + 'consent/parent-guardian?change=true'
+            key: "Relationship",
+            data: "parent.relationship",
+            href: basePath + "consent/parent-guardian?change=true"
           },
           {
-            key: 'Email address',
-            data: 'parent.email',
-            href: basePath + 'consent/parent-guardian?change=true'
+            key: "Email address",
+            data: "parent.email",
+            href: basePath + "consent/parent-guardian?change=true"
           },
           {
-            key: 'Phone number',
-            data: 'parent.telephone',
-            href: basePath + 'consent/parent-guardian?change=true'
+            key: "Phone number",
+            data: "parent.telephone",
+            href: basePath + "consent/parent-guardian?change=true"
           }
         ])
       }) }}
@@ -134,106 +134,106 @@
   <div class="nhsuk-card">
     <div class="nhsuk-card__content">
       {{ summaryList({
-        classes: 'app-summary-list--full-width',
+        classes: "app-summary-list--full-width",
         rows: decorateRows([
           {
-            key: 'Has your child been diagnosed with asthma?',
+            key: "Has your child been diagnosed with asthma?",
             value: {
-              html: d('health.asthma') if d('health.asthma') == 'No' else d('health.asthma') + ' – ' + d('health.asthma-details')
+              html: d("health.asthma") if d("health.asthma") == "No" else d("health.asthma") + " – " + d("health.asthma-details")
             },
-            href: basePath + 'consent/health-asthma?change=true'
+            href: basePath + "consent/health-asthma?change=true"
           },
           {
-            key: 'Has your child taken any oral steroids for their asthma in the last 2 weeks?',
+            key: "Has your child taken any oral steroids for their asthma in the last 2 weeks?",
             value: {
-              html: d('health.asthma-steroids') if d('health.asthma-steroids') == 'No' else d('health.asthma-steroids') + ' – ' + d('health.asthma-steroids-details')
+              html: d("health.asthma-steroids") if d("health.asthma-steroids") == "No" else d("health.asthma-steroids") + " – " + d("health.asthma-steroids-details")
             },
-            href: basePath + 'consent/health-asthma-steroids?change=true'
-          } if d('health.asthma') == 'Yes',
+            href: basePath + "consent/health-asthma-steroids?change=true"
+          } if d("health.asthma") == "Yes",
           {
-            key: 'Has your child been admitted to intensive care for their asthma?',
+            key: "Has your child been admitted to intensive care for their asthma?",
             value: {
-              html: d('health.asthma-admitted') if d('health.asthma-admitted') == 'No' else d('health.asthma-admitted') + ' – ' + d('health.asthma-admitted-details')
+              html: d("health.asthma-admitted") if d("health.asthma-admitted") == "No" else d("health.asthma-admitted") + " – " + d("health.asthma-admitted-details")
             },
-            href: basePath + 'consent/health-asthma-admitted?change=true'
-          } if d('health.asthma') == 'Yes',
+            href: basePath + "consent/health-asthma-admitted?change=true"
+          } if d("health.asthma") == "Yes",
           {
-            key: 'Has your child had a flu vaccination in the last 5 months?',
+            key: "Has your child had a flu vaccination in the last 5 months?",
             value: {
-              html: d('health.recent-flu-vaccination') if d('health.recent-flu-vaccination') == 'No' else d('health.recent-flu-vaccination') + ' – ' + d('health.recent-flu-vaccination-details')
+              html: d("health.recent-flu-vaccination") if d("health.recent-flu-vaccination") == "No" else d("health.recent-flu-vaccination") + " – " + d("health.recent-flu-vaccination-details")
             },
-            href: basePath + 'consent/health-recent-flu-vaccination?change=true'
-          } if vaccine == 'flu',
+            href: basePath + "consent/health-recent-flu-vaccination?change=true"
+          } if vaccine == "flu",
           {
-            key: 'Does your child have a disease or treatment that severely affects their immune system?',
+            key: "Does your child have a disease or treatment that severely affects their immune system?",
             value: {
-              html: d('health.immune-system') if d('health.immune-system') == 'No' else d('health.immune-system') + ' – ' + d('health.immune-system-details')
+              html: d("health.immune-system") if d("health.immune-system") == "No" else d("health.immune-system") + " – " + d("health.immune-system-details")
             },
-            href: basePath + 'consent/health-immune-system?change=true'
+            href: basePath + "consent/health-immune-system?change=true"
           },
           {
-            key: 'Is anyone in your household currently having treatment that severely affects their immune system?',
+            key: "Is anyone in your household currently having treatment that severely affects their immune system?",
             value: {
-              html: d('health.household-immune-system') if d('health.household-immune-system') == 'No' else d('health.household-immune-system') + ' – ' + d('health.household-immune-system-details')
+              html: d("health.household-immune-system") if d("health.household-immune-system") == "No" else d("health.household-immune-system") + " – " + d("health.household-immune-system-details")
             },
-            href: basePath + 'consent/health-immune-system?change=true'
+            href: basePath + "consent/health-immune-system?change=true"
           },
           {
-            key: 'Has your child ever been admitted to intensive care due an allergic reaction to egg?',
+            key: "Has your child ever been admitted to intensive care due an allergic reaction to egg?",
             value: {
-              html: d('health.egg-allergy') if d('health.egg-allergy') == 'No' else d('health.egg-allergy') + ' – ' + d('health.egg-allergy-details')
+              html: d("health.egg-allergy") if d("health.egg-allergy") == "No" else d("health.egg-allergy") + " – " + d("health.egg-allergy-details")
             },
-            href: basePath + 'consent/health-egg-allergy?change=true'
+            href: basePath + "consent/health-egg-allergy?change=true"
           },
           {
-            key: 'Does your child have any allergies to medication?',
+            key: "Does your child have any allergies to medication?",
             value: {
-              html: d('health.medication-allergies') if d('health.medication-allergies') == 'No' else d('health.medication-allergies') + ' – ' + d('health.medication-allergies-details')
+              html: d("health.medication-allergies") if d("health.medication-allergies") == "No" else d("health.medication-allergies") + " – " + d("health.medication-allergies-details")
             },
-            href: basePath + 'consent/health-medication-allergies?change=true'
+            href: basePath + "consent/health-medication-allergies?change=true"
           },
           {
-            key: 'Has your child ever had a reaction to previous vaccinations?',
+            key: "Has your child ever had a reaction to previous vaccinations?",
             value: {
-              html: d('health.previous-reaction') if d('health.previous-reaction') == 'No' else d('health.previous-reaction') + ' – ' + d('health.previous-reaction-details')
+              html: d("health.previous-reaction") if d("health.previous-reaction") == "No" else d("health.previous-reaction") + " – " + d("health.previous-reaction-details")
             },
-            href: basePath + 'consent/health-previous-reaction?change=true'
+            href: basePath + "consent/health-previous-reaction?change=true"
           },
                     {
-            key: 'Does you child take regular aspirin?',
+            key: "Does you child take regular aspirin?",
             value: {
-              html: d('health.aspirin') if d('health.aspirin') == 'No' else d('health.aspirin') + ' – ' + d('health.aspirin-details')
+              html: d("health.aspirin") if d("health.aspirin") == "No" else d("health.aspirin") + " – " + d("health.aspirin-details")
             },
-            href: basePath + 'consent/health-aspirin?change=true'
+            href: basePath + "consent/health-aspirin?change=true"
           },
           {
-            key: 'Does your child have any severe allergies that have led to an anaphylactic reaction?',
+            key: "Does your child have any severe allergies that have led to an anaphylactic reaction?",
             value: {
-              html: d('health.allergy') if d('health.allergy') == 'No' else d('health.allergy') + ' – ' + d('health.allergy-details')
+              html: d("health.allergy") if d("health.allergy") == "No" else d("health.allergy") + " – " + d("health.allergy-details")
             },
-            href: basePath + 'consent/health-allergy?change=true'
-          } if not vaccine == 'flu',
+            href: basePath + "consent/health-allergy?change=true"
+          } if not vaccine == "flu",
           {
-            key: 'Does your child have any existing medical conditions?',
+            key: "Does your child have any existing medical conditions?",
             value: {
-              html: d('health.existing-conditions') if d('health.existing-conditions') == 'No' else d('health.existing-conditions') + ' – ' + d('health.existing-conditions-details')
+              html: d("health.existing-conditions") if d("health.existing-conditions") == "No" else d("health.existing-conditions") + " – " + d("health.existing-conditions-details")
             },
-            href: basePath + 'consent/health-existing-conditions?change=true'
-          } if not vaccine == 'flu',
+            href: basePath + "consent/health-existing-conditions?change=true"
+          } if not vaccine == "flu",
           {
-            key: 'Does your child take any regular medication?',
+            key: "Does your child take any regular medication?",
             value: {
-              html: d('health.regular-medication') if d('health.regular-medication') == 'No' else d('health.regular-medication') + ' – ' + d('health.regular-medication-details')
+              html: d("health.regular-medication") if d("health.regular-medication") == "No" else d("health.regular-medication") + " – " + d("health.regular-medication-details")
             },
-            href: basePath + 'consent/health-regular-medication?change=true'
-          } if not vaccine == 'flu',
+            href: basePath + "consent/health-regular-medication?change=true"
+          } if not vaccine == "flu",
           {
-            key: 'Is there anything else you think we should know?',
+            key: "Is there anything else you think we should know?",
             value: {
-              html: d('health.anything-else') if d('health.anything-else') == 'No' else d('health.anything-else') + ' – ' + d('health.anything-else-details')
+              html: d("health.anything-else") if d("health.anything-else") == "No" else d("health.anything-else") + " – " + d("health.anything-else-details")
             },
-            href: basePath + 'consent/health-anything-else?change=true'
-          } if not vaccine == 'flu'
+            href: basePath + "consent/health-anything-else?change=true"
+          } if not vaccine == "flu"
         ])
       }) }}
     </div>
