--- a/app/views/consent/child-gp.html
+++ b/app/views/consent/child-gp.html
@@ -22,18 +22,18 @@
     },
     items: [
       {
-        text: 'Yes, they are registered with a GP',
-        value: 'yes',
+        text: "Yes, they are registered with a GP",
+        value: "yes",
         conditional: {
           html: html
         }
       },
       {
-        text: 'No, they are not registered with a GP',
-        value: 'no'
+        text: "No, they are not registered with a GP",
+        value: "no"
       },
       {
-        text: 'I don’t know'
+        text: "I don’t know"
       }
     ],
     decorate: "child.has-gp"
