--- a/app/views/consent/confirm-email.html
+++ b/app/views/consent/confirm-email.html
@@ -1,18 +1,18 @@
 {% extends "layouts/wizard.html" %}
-{% set title = 'Confirm your email address' %}
+{% set title = "Confirm your email address" %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
-  <p>We’ve emailed a confirmation code to {{ data.parent.email or 'email@example.com' }}</p>
+  <p>We’ve emailed a confirmation code to {{ data.parent.email or "email@example.com" }}</p>
 
   {{ input({
     label: {
       text: "Enter your code",
       classes: "nhsuk-label--s nhsuk-u-margin-bottom-2"
     },
-    classes: 'nhsuk-!-width-one-quarter',
-    decorate: 'email-code'
+    classes: "nhsuk-!-width-one-quarter",
+    decorate: "email-code"
   }) }}
 
   <p>
