--- a/app/views/consent/health-recent-flu-vaccination.html
+++ b/app/views/consent/health-recent-flu-vaccination.html
@@ -21,7 +21,7 @@
     },
     items: [
       {
-        text: 'Yes',
+        text: "Yes",
         conditional: {
           html: html
         }
