--- a/app/views/consent/parent-guardian.html
+++ b/app/views/consent/parent-guardian.html
@@ -18,7 +18,7 @@
         text: "Relationship to the child"
       },
       hint: {
-        text: 'For example, carer'
+        text: "For example, carer"
       },
       decorate: "parent.relationship-other"
     }) }}
@@ -31,11 +31,11 @@
       }
     },
     items: [
-      { text: 'Mum' },
-      { text: 'Dad' },
-      { text: 'Guardian' },
+      { text: "Mum" },
+      { text: "Dad" },
+      { text: "Guardian" },
       {
-        text: 'Other',
+        text: "Other",
         conditional: {
           html: other
         }
@@ -69,7 +69,7 @@
         },
         rows: 5,
         formGroup: {
-          classes: 'nhsuk-u-margin-bottom-0'
+          classes: "nhsuk-u-margin-bottom-0"
         },
         decorate: "parent.accessibility-other"
       }) }}
@@ -82,10 +82,10 @@
         }
       },
       items: [
-        { text: 'Text only (no voice calls)' },
-        { text: 'Voice only (no text)' },
+        { text: "Text only (no voice calls)" },
+        { text: "Voice only (no text)" },
         {
-          text: 'Other',
+          text: "Other",
           conditional: {
             html: otherHtml
           }
