--- a/app/views/dpt/3-in-1-consent.html
+++ b/app/views/dpt/3-in-1-consent.html
@@ -15,10 +15,10 @@
     },
     items: [
       {
-        text: 'Yes, I agree to them having the 3-in-1 teenage booster'
+        text: "Yes, I agree to them having the 3-in-1 teenage booster"
       },
       {
-        text: 'No'
+        text: "No"
       }
     ],
     decorate: "3-in-1-consent"
