--- a/app/views/examples/wizard/confirm.html
+++ b/app/views/examples/wizard/confirm.html
@@ -9,7 +9,7 @@
         heading: title,
         headingLevel: 1,
         headingClasses: "nhsuk-u-margin-bottom-4",
-        descriptionHtml: '<p class="nhsuk-u-font-size-24">Your reference number<br><strong class="nhsuk-u-font-size-32">HDJ2123F</strong></p>'
+        descriptionHtml: "<p class=\"nhsuk-u-font-size-24\">Your reference number<br><strong class=\"nhsuk-u-font-size-32\">HDJ2123F</strong></p>"
       }) }}
 
       <h2 class="nhsuk-heading-m">What happens next</h2>
