--- a/app/views/consent/parent-guardian.html
+++ b/app/views/consent/parent-guardian.html
@@ -68,7 +68,7 @@
 
   {{ input({
     label: {
-      text: "Telephone number (optional)"
+      text: "Phone number (optional)"
     },
     hint: {
       text: "A nurse might call you about your child’s vaccination"
