--- a/app/views/consent/telephone-contact-method.html
+++ b/app/views/consent/telephone-contact-method.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Telephone contact method" %}
+{% set title = "Phone contact method" %}
 
 {% block form %}
   {% set html %}
