--- a/app/views/emails/flu-consent-triage-complete.html
+++ b/app/views/emails/flu-consent-triage-complete.html
@@ -8,7 +8,7 @@
 
   <p>Thanks for answering the health questions about {{ childName }}. Our nurses have confirmed it’s safe for {{ childName.split(" ") | first }} to have the nasal flu vaccination.</p>
 
-  <p>This will take place at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
+  <p>This will take place at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}. Please tell {{ childName.split(" ") | first }} that they’ll be vaccinated on this date.</p>
 
   <p>We’ll let you know once {{ childName.split(" ") | first }} is vaccinated.</p>
 
