Reword response time wording in emails

--- a/app/views/emails/flu-consent.html
+++ b/app/views/emails/flu-consent.html
@@ -19,6 +19,8 @@
     <a href="/flu/start">Give or refuse consent for the flu vaccination</a>
   </p>
 
+  <p>Responding will take less than 5 minutes.</p>
+
   <h2 class="nhsuk-heading-m">About the flu vaccine</h2>
 
   <p>The vaccination is a quick and painless spray up the nose. Even if your child had the vaccine last year, the type of flu can vary each winter, so it is recommended to have it again this year.</p>
