--- a/app/views/emails/flu-reminder.html
+++ b/app/views/emails/flu-reminder.html
@@ -7,12 +7,11 @@
 
   <p>If you want your child to get the flu vaccine during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }}.</p>
 
-
   <p>
     <a href="/flu/start">Give or refuse consent for the flu vaccination</a>
   </p>
 
-  <p>This will take less than 5 minutes. If you do not give consent, it’s still important for you to respond.</p>
+  <p>Responding will take less than 5 minutes. If you do not give consent, it’s still important for you to respond.</p>
 
   <h2 class="nhsuk-heading-m">About the flu vaccine</h2>
 
