Tweak emails following user feedback

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,7 @@
             <li><a href="/emails/flu-consent-triage-complete">Confirmation of agreement for flu vaccination (triage complete)</a></li>
             <li><a href="/emails/flu-consent-injection">Confirmation of agreement for flu vaccination using injection</a></li>
             <li><a href="/emails/flu-refusal-confirmation">Confirmation of refusal for flu vaccination</a></li>
+            <li><a href="/emails/flu-vaccine-reminder">Reminder of upcoming vaccination</a></li>
             <li><a href="/emails/flu-vaccine-given">Vaccine given</a></li>
           </ul>
           <ul class="nhsuk-list">
