Add hint text to email and address questions

--- a/app/views/consent/address.html
+++ b/app/views/consent/address.html
@@ -9,6 +9,8 @@
       isPageHeading: true
     }
   }) %}
+    <p class="nhsuk-hint">We use this to confirm your child’s identity</p>
+
     {{ input({
       label: {
         text: "Address line 1"
