--- a/app/views/consent/parent-guardian.html
+++ b/app/views/consent/parent-guardian.html
@@ -63,6 +63,9 @@
     label: {
       text: "Email address"
     },
+    hint: {
+      text: "We use this to send you confirmation messages"
+    },
     decorate: "parent.email"
   }) }}
 
