--- a/app/views/emails/flu-consent.html
+++ b/app/views/emails/flu-consent.html
@@ -25,7 +25,9 @@
 
   <p>The vaccination is a quick and painless spray up the nose. Even if your child had the vaccine last year, the type of flu can vary each winter, so it is recommended to have it again this year.</p>
 
-  <p>The nasal spray contains gelatine. If your child does not use gelatine products, they could have an injection instead.</p>
+  <p>The nasal spray contains gelatine. If your child does not use gelatine products, or the nasal spray is not suitable for medical reasons, they could have an injection instead.</p>
+
+  <p>The nasal spray gives children the best protection against flu. However, the injected vaccine is a good alternative if the nasal spray vaccine cannot be used.</p>
 
   <p><a href="https://www.nhs.uk/conditions/vaccinations/child-flu-vaccine/">Find out more about the flu vaccine on NHS.UK</a></p>
 
