Use transactional header

--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -1,5 +1,7 @@
 {% extends "template.njk" %}
 
+{% set mainClasses = "nhsuk-main-wrapper--s" %}
+
 {% block head %}
   <link rel="stylesheet" href="/public/application.css" media="all">
   <script src="/public/application.js" defer></script>
@@ -15,13 +17,12 @@
 
 {% block header %}
   {{ header({
-    service: {
+    transactionalService: {
       name: serviceName,
       href: "/"
     },
     showNav: "false",
-    showSearch: "false",
-    containerClasses: "nhsuk-width-container"
+    showSearch: "false"
   }) }}
 {% endblock %}
 
