Use transactional header

--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -15,13 +15,12 @@
 
 {% block header %}
   {{ header({
-    service: {
+    transactionalService: {
       name: serviceName,
       href: "/"
     },
     showNav: "false",
-    showSearch: "false",
-    containerClasses: "nhsuk-width-container"
+    showSearch: "false"
   }) }}
 {% endblock %}
 
