Use outerContent block for page navigation

--- a/app/views/consent/confirmation.html
+++ b/app/views/consent/confirmation.html
@@ -21,7 +21,7 @@
 {% endset %}
 
 {% set hideButton = true %}
-{% block pageNavigation %}{% endblock %}
+{% block outerContent %}{% endblock %}
 
 {% block form %}
   {{ govukPanel({
