--- a/app/views/dpt/confirmation.html
+++ b/app/views/dpt/confirmation.html
@@ -9,7 +9,7 @@
 {% endset %}
 
 {% set hideButton = true %}
-{% block pageNavigation %}{% endblock %}
+{% block outerContent %}{% endblock %}
 
 {% block form %}
   <h1 class="nhsuk-heading-xl">{{ title }}</h1>
