--- a/app/views/consent/confirmation-contraindications.html
+++ b/app/views/consent/confirmation-contraindications.html
@@ -20,7 +20,7 @@
 {% endset %}
 
 {% set hideButton = true %}
-{% block pageNavigation %}{% endblock %}
+{% block outerContent %}{% endblock %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
