--- a/app/views/consent/confirmation-no-consent.html
+++ b/app/views/consent/confirmation-no-consent.html
@@ -11,7 +11,7 @@
 {% endset %}
 
 {% set hideButton = true %}
-{% block pageNavigation %}{% endblock %}
+{% block outerContent %}{% endblock %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
