--- a/app/views/flu/confirmation-jab-contact.html
+++ b/app/views/flu/confirmation-jab-contact.html
@@ -1,7 +1,7 @@
 {% extends "layouts/wizard.html" %}
 {% set title = "Your child will not get a nasal flu vaccination at school" %}
 {% set hideButton = true %}
-{% block pageNavigation %}{% endblock %}
+{% block outerContent %}{% endblock %}
 
 {% block form %}
   <h1 class="nhsuk-heading-l">{{ title }}</h1>
