Link to UKHSA leaflet in invitation email

--- a/app/views/emails/flu-consent.html
+++ b/app/views/emails/flu-consent.html
@@ -29,7 +29,8 @@
 
   <p>The nasal spray gives children the best protection against flu. However, the injected vaccine is a good alternative if the nasal spray vaccine cannot be used.</p>
 
-  <p><a href="https://www.nhs.uk/conditions/vaccinations/child-flu-vaccine/">Find out more about the flu vaccine on NHS.UK</a></p>
+  <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1165161/UKHSA-12652-protecting-your-child-against-flu-information-for-parents-and-carers.pdf">Find out more about protecting your child against flu</a></p>
 
+  <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1107767/UKHSA-12462-vaccines-porcine-gelatine-English.pdf">Find out more about the use of gelatine in the flu vaccine (including the views of faith communities)</a></p>
   {% include "emails/_contact.html" %}
 {% endblock %}
