Update emails to ensure parents giveing informed consent

--- a/app/views/emails/flu-reminder.html
+++ b/app/views/emails/flu-reminder.html
@@ -5,7 +5,9 @@
 {% block email %}
   <p>We wrote to you recently about a visit by a local health team to {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
 
-  <p>If you want your child to get the flu vaccine during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }}.</p>
+  <p>If you want your child to get the flu vaccination during this visit, you need to give consent by {{ deadlineDate | date("cccc d MMMM") }}.</p>
+
+  <p>The vaccination is a quick and painless spray up the nose. Even if your child had the vaccine last year, the type of flu can vary each winter, so we recommend they have it again this year.</p>
 
   <p>
     <a href="/flu/start">Give or refuse consent for the flu vaccination</a>
