Add information about responding by phone

--- a/app/views/emails/flu-reminder.html
+++ b/app/views/emails/flu-reminder.html
@@ -23,5 +23,9 @@
 
   <p><a href="https://www.nhs.uk/conditions/vaccinations/child-flu-vaccine/">Find out more about the flu vaccine on NHS.UK</a></p>
 
+  <h2 class="nhsuk-heading-m">If you have trouble using the online form</h2>
+
+  <p>If you have any trouble using the online form, you can respond over the phone using the contact details below.</p>
+
   {% include "emails/_contact.html" %}
 {% endblock %}
