--- a/app/views/emails/flu-consent.html
+++ b/app/views/emails/flu-consent.html
@@ -32,5 +32,10 @@
   <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1165161/UKHSA-12652-protecting-your-child-against-flu-information-for-parents-and-carers.pdf">Find out more about protecting your child against flu</a></p>
 
   <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1107767/UKHSA-12462-vaccines-porcine-gelatine-English.pdf">Find out more about the use of gelatine in the flu vaccine (including the views of faith communities)</a></p>
+
+  <h2 class="nhsuk-heading-m">If you have trouble using the online form</h2>
+
+  <p>If you have any trouble using the online form, you can respond over the phone using the contact details below.</p>
+
   {% include "emails/_contact.html" %}
 {% endblock %}
