--- a/app/views/consent/consent.html
+++ b/app/views/consent/consent.html
@@ -2,7 +2,7 @@
 
 {% set title %}
   {% if vaccine == "HPV" %}
-    Do you agree to them having both doses of the HPV vaccination?
+    Do you agree to them having the HPV vaccination?
   {% else %}
     Do you agree to them having a nasal flu vaccination?
   {% endif %}
