--- a/app/views/hpv/start.html
+++ b/app/views/hpv/start.html
@@ -8,9 +8,9 @@
         <div class="nhsuk-grid-column-two-thirds">
           <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
-          <p>The HPV vaccine is given as 2 injections into the upper arm spaced at least 6 months apart.</p>
+          <p>The HPV vaccine helps to prevent HPV related cancers from developing in boys and girls.</p>
 
-          <p class="nhsuk-u-margin-bottom-6">It’s important to have both doses of the vaccine to be properly protected.</p>
+          <p class="nhsuk-u-margin-bottom-6">The number of doses you need depends on your age and how well your immune system works. Young people usually only need 1 dose.</p>
 
           {{ button({
             text: "Start now",
