Update HPV emails

--- a/app/views/emails/hpv-consent.html
+++ b/app/views/emails/hpv-consent.html
@@ -3,7 +3,7 @@
 {% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
-  <p>Your local health team are coming to {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }} to give the first dose of the human papillomavirus (HPV) vaccine to pupils in Year 8.</p>
+  <p>Your local health team are coming to {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }} to give the human papillomavirus (HPV) vaccine to pupils in Year 8.</p>
 
   <h2 class="nhsuk-heading-m">What the vaccine is for</h2>
 
@@ -29,9 +29,9 @@
 
   <h2 class="nhsuk-heading-m">About the HPV vaccine</h2>
 
-  <p>Girls and boys in England are offered the 1st HPV vaccination when they’re in Year 8. The 2nd dose is offered 6 to 24 months later.</p>
+  <p>Girls and boys in England are offered the HPV vaccination when they’re in Year 8.</p>
 
-  <p>It’s important to have both doses of the vaccine to be properly protected.</p>
+  <p>The number of doses you need depends on your age and how well your immune system works. Young people usually only need 1 dose.</p>
 
   <p><a href="https://www.nhs.uk/conditions/vaccinations/hpv-human-papillomavirus-vaccine/">Find out more about the HPV vaccine on NHS.UK</a></p>
 
