--- a/app/views/emails/hpv-student.html
+++ b/app/views/emails/hpv-student.html
@@ -25,9 +25,9 @@
 
   <p>When the vaccine is injected into your body, your immune system makes antibodies. If you got HPV in the future, these antibodies would stop the virus from infecting your cells.</p>
 
-  <p>The vaccine is given in your arm, and you need two doses to be fully protected.</p>
+  <p>The vaccine works best if it’s given before you’re sexually active.</p>
 
-  <p>It works best if it’s given before you’re sexually active.</p>
+  <p>Young people usually only need 1 dose.</p>
 
   <h2 class="nhsuk-heading-m">How do I get the vaccine?</h2>
 
